--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,24 @@ body{
 	font:12px "微软雅黑",Arial;
 	overflow: hidden;
 }
+#load{
+	position:fixed;
+	top:0
+	left:0;
+	z-index:9999;
+	width:100%;
+	height:100%;
+	margin:0 auto;
+	text-align:center;
+	background:#fff;
+	/*display:table-cell;*/
+	/*vertical-align:middle;*/
+}
+#load img{
+	/*display:inline-block;*/
+	margin:20%;
+    
+}
 ul li{
 	list-style: none;
 }
